--- a/client/index.html
+++ b/client/index.html
@@ -10,11 +10,7 @@
     <meta property="og:title" content="DX Skills Academy - Gamified Learning Platform" />
     <meta property="og:description" content="Master DX skills through gamified challenges. Discover motivated talent and get recognized by top recruiters." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://drive.google.com/uc?id=1q2q4bqdZUcFmMRSkrRz7eHsD5u8i9YbH" />
   </head>
 
   <body>
